--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Michael is a hoe!</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Michael is my best friend</h1>
 </body>
 </html>
