--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Michael is my best friend</h1>
+<h1>Michael is my best friend!</h1>
+  <a href="https://www.youtube.com/watch?v=dSbni6YRXl8" target="_blank">Link to YouTube Video</a>
+<src></src>
 </body>
 </html>
