--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Michael is my best friend!</h1>
-  <a href="https://www.youtube.com/watch?v=dSbni6YRXl8" target="_blank">Link to YouTube Video</a>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/dSbni6YRXl8" frameborder="0" allowfullscreen></iframe>
 <src></src>
 </body>
 </html>
