--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Michael is my best friend!</h1>
+<h1>hi thank you for checking in! still under work come back later please!</h1>
+  <a href="https://www.nuriel.com/home.html">thoughts</a>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/dSbni6YRXl8" frameborder="0" allowfullscreen></iframe>
 <src></src>
 </body>
