--- a/home.html
+++ b/home.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Michael is my best friend!</h1>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/dSbni6YRXl8" frameborder="0" allowfullscreen></iframe>
-<src></src>
+<h1>hi this is still under work come back later</h1>
 </body>
 </html>
