--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <h1>hi thank you for checking in! still under work come back later please!</h1>
   <a href="https://www.nuriel.net/home.html">thoughts</a>
   <p></p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/dSbni6YRXl8" frameborder="0" allowfullscreen></iframe>
+  <div style="text-align: center;">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/dSbni6YRXl8" frameborder="0" allowfullscreen></iframe>
+  </div>
 <src></src>
 </body>
 </html>
