--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>hi thank you for checking in! still under work come back later please!</h1>
+<h1 style="align": center;">hi thank you for checking in! still under work come back later please!</h1>
   <a href="https://www.nuriel.net/home.html">thoughts</a>
   <p></p>
   <div style="text-align: center;">
