--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1 style="align": center;">hi thank you for checking in! still under work come back later please!</h1>
+<head>
+  <title>work in progress</title>
+</head>
+<body style="text-align: center;">
+  <h1>hi thanks for checking in still under work sorry :(</h1>
   <a href="https://www.nuriel.net/home.html">thoughts</a>
   <p></p>
-  <div style="text-align: center;">
+  <div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/dSbni6YRXl8" frameborder="0" allowfullscreen></iframe>
   </div>
-<src></src>
 </body>
 </html>
