--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 </head>
 <body style="text-align: center;">
   <h1>hi thanks for checking in still under work sorry :(</h1>
-  <a href="https://www.nuriel.net/home.html">thoughts</a>
+  <a href="https://www.nuriel.net/thoughts.html">thoughts</a>
   <p></p>
   <div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/dSbni6YRXl8" frameborder="0" allowfullscreen></iframe>
