--- a/thoughts.html
+++ b/thoughts.html
@@ -1,6 +1,59 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <style>
+    {
+      width: 100px;
+      height: 100px;
+      background-image: url('pixelFolder.png');
+      background-size: cover;
+      position: absolute;
+    }
+    
+    /* Style for the text */
+    #text {
+      position: absolute;
+      top: 110px;
+      left: 50px;
+    }
+  </style>
+</head>
 <body>
-<h1>hi this is still under work come back later</h1>
+
+<div id="folder" draggable="true"></div>
+<div id="text">advice</div>
+
+<script>
+  const folder = document.getElementById('folder');
+  const text = document.getElementById('text');
+
+  folder.addEventListener('dragstart', dragStart);
+
+  function dragStart(event) {
+    // Set the data to be dragged
+    event.dataTransfer.setData('text/plain', null);
+
+    // Calculate initial position offsets
+    const offsetX = event.clientX - folder.getBoundingClientRect().left;
+    const offsetY = event.clientY - folder.getBoundingClientRect().top;
+
+    // Update position while dragging
+    document.addEventListener('mousemove', drag);
+    document.addEventListener('mouseup', dragEnd);
+
+    function drag(event) {
+      folder.style.left = event.clientX - offsetX + 'px';
+      folder.style.top = event.clientY - offsetY + 'px';
+      text.style.left = event.clientX - offsetX + 'px';
+      text.style.top = event.clientY - offsetY + 100 + 'px'; // Adjust for text position
+    }
+
+    function dragEnd() {
+      document.removeEventListener('mousemove', drag);
+      document.removeEventListener('mouseup', dragEnd);
+    }
+  }
+</script>
+
 </body>
 </html>
