--- a/thoughts.html
+++ b/thoughts.html
@@ -6,7 +6,7 @@
     #folder {
       width: 100px;
       height: 100px;
-      background-image: url('pixelFolder.png');
+      background-image: url('https://raw.githubusercontent.com/FireMS/nuriel/main/pixelFolder.png');
       background-size: cover;
       position: absolute;
     }
