--- a/thoughts.html
+++ b/thoughts.html
@@ -46,7 +46,7 @@
     if (isDragging) {
       folder.style.left = event.clientX - offsetX + 'px';
       folder.style.top = event.clientY - offsetY + 'px';
-      text.style.left = event.clientX - offsetX + 'px';
+      text.style.left = event.clientX - offsetX + 16 + 'px';
       text.style.top = event.clientY - offsetY + 60 + 'px';
     }
   }
