--- a/thoughts.html
+++ b/thoughts.html
@@ -11,10 +11,10 @@
     }
     #text {
       position: absolute;
-      top: 70px;
-      left: 50%;
-      transform: translateX(-50%);
       text-align: center;
+      width: 100%; /* Ensure text spans the full width */
+      top: calc(56px + 10px); /* Adjust based on image height and desired spacing */
+      left: 0;
     }
   </style>
 </head>
@@ -48,8 +48,8 @@
     if (isDragging) {
       folder.style.left = event.clientX - offsetX + 'px';
       folder.style.top = event.clientY - offsetY + 'px';
-      text.style.left = event.clientX - offsetX + 'px';
-      text.style.top = event.clientY - offsetY + 70 + 'px';
+      text.style.left = event.clientX - folder.offsetWidth / 2 + 'px'; // Center horizontally
+      text.style.top = event.clientY + 10 + 'px'; // Adjust based on desired spacing
     }
   }
 </script>
