--- a/thoughts.html
+++ b/thoughts.html
@@ -1,38 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <style>
-    #folder {
-      width: 64px;
-      height: 56px;
-      background-image: url('https://raw.githubusercontent.com/FireMS/nuriel/main/pixelFolder.png');
-      background-size: cover;
-      position: absolute;
-    }
-    #text {
-      position: absolute;
-      text-align: center;
-      width: 100%; /* Ensure text spans the full width */
-      top: calc(56px + 10px); /* Adjust based on image height and desired spacing */
-      left: 50%;
-      transform: translateX(-50%); /* Center horizontally */
-    }
-  </style>
-</head>
-<body>
-
-<div id="folder"></div>
-<div id="text">advice</div>
-
-<script>
-  const folder = document.getElementById('folder');
-  const text = document.getElementById('text');
-  let isDragging = false;
-  let offsetX, offsetY;
-
-  folder.addEventListener('mousedown', dragStart);
-  folder.addEventListener('mouseup', dragEnd);
-
-  function dragStart(event) {
-    isDragging = true;
-    offsetX = event.clientX - folder.ge
+  <script>
+    {
+    width: 64px;
+    height: 56px;
+    background-image: url('https://raw.githubusercontent.com/FireMS/nuriel/main/pixelFolder.png');
+  </script>
+</html>
