--- a/thoughts.html
+++ b/thoughts.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <script>
-    {
+    #draggable {
     width: 64px;
     height: 56px;
     background-image: url('https://raw.githubusercontent.com/FireMS/nuriel/main/pixelFolder.png');
+    }
   </script>
+  <div id="draggable"></div>
 </html>
