--- a/thoughts.html
+++ b/thoughts.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <script>
+  <style>
     #draggable {
     width: 64px;
     height: 56px;
     background-image: url('https://raw.githubusercontent.com/FireMS/nuriel/main/pixelFolder.png');
+    position: absolute;
     }
-  </script>
+  </style>
   <div id="draggable"></div>
 </html>
