--- a/thoughts.html
+++ b/thoughts.html
@@ -16,6 +16,7 @@
   <script>
     const draggable = document.getElementById('draggable');
     const text =  document.getElementById('text');
+    updateTextPosition();
     
     let offsetX, offsetY;
     let isDragging = false;
