--- a/thoughts.html
+++ b/thoughts.html
@@ -70,12 +70,12 @@
 </head>
 <body>
     <div id="draggable"></div>
-    <div id="text">advice</div>
+    <div id="text">nuL</div>
 
     <script>
         const draggable = document.getElementById('draggable');
         const text = document.getElementById('text');
-
+        updateTextPosition();
         let offsetX, offsetY;
         let isDragging = false;
 
