--- a/thoughts.html
+++ b/thoughts.html
@@ -7,9 +7,9 @@
     <style>
         /* Styling for the folder */
         .folder {
-            width: 100px;
-            height: 80px;
-            background-color: #f0f0f0;
+            width: 64px;
+            height: 56px;
+            background-image: url('https://github.com/FireMS/nuriel/blob/main/pixelFolder.png');
             border: 1px solid #ccc;
             text-align: center;
             cursor: pointer;
