--- a/thoughts.html
+++ b/thoughts.html
@@ -9,7 +9,7 @@
         .folder {
             width: 64px;
             height: 56px;
-            background-image: url('https://github.com/FireMS/nuriel/blob/main/pixelFolder.png');
+            background-image: url('https://raw.githubusercontent.com/FireMS/nuriel/main/pixelFolder.png');
             border: 1px solid #ccc;
             text-align: center;
             cursor: pointer;
