--- a/thoughts.html
+++ b/thoughts.html
@@ -1,39 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Folders</title>
     <style>
-        /* Styling for the folder */
-        .folder {
+        #draggable {
             width: 64px;
             height: 56px;
             background-image: url('https://raw.githubusercontent.com/FireMS/nuriel/main/pixelFolder.png');
-            border: 1px solid #ccc;
+            position: absolute;
+        }
+        #text {
+            position: absolute;
             text-align: center;
-            cursor: pointer;
-            user-select: none;
         }
     </style>
 </head>
 <body>
-    <div class="folder" draggable="true" ondragstart="drag(event)">
-        nuL
-    </div>
+    <div id="draggable"></div>
+    <div id="text">nuL</div>
 
-    <!-- JavaScript to handle folder drag and click -->
     <script>
-        function drag(event) {
-            // Prevent default behavior (e.g., redirecting)
+        const draggable = document.getElementById('draggable');
+        const text = document.getElementById('text');
+        updateTextPosition();
+        let offsetX, offsetY;
+        let isDragging = false;
+
+        draggable.addEventListener('mousedown', dragStart);
+        draggable.addEventListener('mouseup', dragEnd);
+        draggable.addEventListener('touchstart', dragStart);
+        draggable.addEventListener('touchend', dragEnd);
+
+        function dragStart(event) {
+            isDragging = true;
+            const clientX = event.type === 'mousedown' ? event.clientX : event.touches[0].clientX;
+            const clientY = event.type === 'mousedown' ? event.clientY : event.touches[0].clientY;
+            offsetX = clientX - draggable.getBoundingClientRect().left;
+            offsetY = clientY - draggable.getBoundingClientRect().top;
             event.preventDefault();
         }
 
-        // Handle folder click
-        document.querySelector('.folder').addEventListener('click', function() {
-            // Redirect to Google (you can change the URL)
-            window.location.href = 'https://www.google.com';
-        });
+        function dragEnd() {
+            isDragging = false;
+        }
+
+        document.addEventListener('mousemove', drag);
+        document.addEventListener('touchmove', drag);
+
+        function drag(event) {
+            if (isDragging) {
+                const clientX = event.type === 'mousemove' ? event.clientX : event.touches[0].clientX;
+                const clientY = event.type === 'mousemove' ? event.clientY : event.touches[0].clientY;
+                draggable.style.left = clientX - offsetX + 'px';
+                draggable.style.top = clientY - offsetY + 'px';
+                updateTextPosition();
+                event.preventDefault();
+            }
+        }
+
+        function updateTextPosition() {
+            text.style.left = draggable.getBoundingClientRect().left + 'px';
+            text.style.top = draggable.getBoundingClientRect().bottom + 'px';
+        }
     </script>
 </body>
 </html>
