--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    <p style="text-align: center; font-size: 36px;">welcome!</p>
+    <p style="text-align: center; font-size: 36px; font-family:'Comic Sans MS', cursive">welcome!</p>
     <!--nuL attributes-->
     <a class="hyperlink" href="https://google.com" data-href="https://google.com">
         <div class="draggable" id="draggable1"></div>
