--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             position: absolute;
             text-align: center;
             user-select: none;
-            font-family: 'Comic Sans MS', cursive;
+            font-family: 'Comic Sans MS';
         }
     </style>
 </head>
