--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="text" id="text1">socials</div>
 
     <!--about attributes-->
-    <a class="hyperlink" href="https://google.com" data-href="https://nurielmora.github.io/website/about.html">
+    <a class="hyperlink" href="https:/nuriel.net/about.html" data-href="https:/nuriel.net/about.html">
         <div class="draggable" id="draggable2"></div>
     </a>
     <div class="text" id="text2">about</div>
@@ -53,11 +53,11 @@
     <!--js script to implement draggability and hyperlink functionality-->
     <script>
         const imageUrls = [
-            'https://raw.githubusercontent.com/nurielmora/website/main/blackPixelFolder.png',
-            'https://raw.githubusercontent.com/nurielmora/website/main/bluePixelFolder.png',
-            'https://raw.githubusercontent.com/nurielmora/website/main/greenPixelFolder.png',
-            'https://raw.githubusercontent.com/nurielmora/website/main/orangePixelFolder.png',
-            'https://raw.githubusercontent.com/nurielmora/website/main/purplePixelFolder.png'
+          'https://raw.githubusercontent.com/FireMS/nuriel/main/bluePixelFolder.png',
+          'https://raw.githubusercontent.com/FireMS/nuriel/main/greenPixelFolder.png',
+          'https://raw.githubusercontent.com/FireMS/nuriel/main/orangePixelFolder.png',
+          'https://raw.githubusercontent.com/FireMS/nuriel/main/purplePixelFolder.png',
+          'https://raw.githubusercontent.com/FireMS/nuriel/main/blackPixelFolder.png'
         ];
 
         const draggables = [];
