--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="text" id="text1">socials</div>
 
     <!--about attributes-->
-    <a class="hyperlink" href="https:/nuriel.net/about.html" data-href="about.html">
+    <a class="hyperlink" href="https:/nuriel.net/about.html">
         <div class="draggable" id="draggable2"></div>
     </a>
     <div class="text" id="text2">about</div>
