--- a/about.html
+++ b/about.html
@@ -22,4 +22,13 @@
     so if i did ever do that, it'll most likely be on this page right below this text, so if you ever want my two cents on something, feel free to ask!<br><br>
     it's forwarded to my personal email, so i'll get back to it as fast as i can.</p>
   </body>
+  
+  <form action="https://formspree.io/f/xoqgzade" method="POST">
+    <label>
+      Your message:
+      <textarea name="message" placeholder="ask anything anonymously"></textarea>
+    </label>
+    <br><br>
+    <button type="submit">Send</button>
+  </form>
 </html>
