--- a/about.html
+++ b/about.html
@@ -22,9 +22,10 @@
       flex-direction: column;
       align-items: center;
       width: 50%;
+      max-width: 800px; /* Maximum width for larger screens */
     }
     textarea {
-      width: 200%;
+      width: 100%;
       height: 200px;
       font-size: 16px;
       padding: 10px;
