--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 50%;
-      max-width: 800px; /* Maximum width for larger screens */
+      width: 100%;
+      max-width: 800px;
     }
     textarea {
       width: 100%;
