--- a/about.html
+++ b/about.html
@@ -21,12 +21,12 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 80%;
-      max-width: 1000px;
+      width: 90%; /* Increased form width to accommodate larger textarea */
+      max-width: 1200px; /* Maximum width for larger screens */
     }
     textarea {
       width: 100%;
-      max-width: 800px;
+      max-width: 1000px; /* Maximum width for the textarea */
       height: 200px;
       font-size: 16px;
       padding: 10px;
