--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@
       padding: 10px;
       box-sizing: border-box;
       margin-bottom: 20px;
+      align-items: center;
     }
     button {
       font-size: 16px;
