--- a/about.html
+++ b/about.html
@@ -20,19 +20,18 @@
     form {
       display: flex;
       flex-direction: column;
-      width: 150%;
-      max-width: 1200px;
       align-items: center;
+      width: 90%; /* Increased form width to accommodate wider textarea */
+      max-width: 1200px; /* Maximum width for larger screens */
     }
     textarea {
-      width: 150%;
-      max-width: 1000px;
-      height: 200px;
+      width: 90%; /* Adjusted width to 90% of the form width */
+      max-width: 1000px; /* Maximum width for the textarea */
+      height: 400px; /* Doubled the height */
       font-size: 16px;
       padding: 10px;
       box-sizing: border-box;
       margin-bottom: 20px;
-      align-items: center;
     }
     button {
       font-size: 16px;
