--- a/about.html
+++ b/about.html
@@ -21,13 +21,13 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 90%; /* Increased form width to accommodate wider textarea */
+      width: 90%; /* Increased form width to accommodate larger textarea */
       max-width: 1200px; /* Maximum width for larger screens */
     }
     textarea {
-      width: 100%; /* Reverted back to original width */
+      width: 100%;
       max-width: 1000px; /* Maximum width for the textarea */
-      height: 400px; /* Doubled the height */
+      height: 200px;
       font-size: 16px;
       padding: 10px;
       box-sizing: border-box;
@@ -48,4 +48,16 @@
   My goal is that somebody will find this website and find something that can resonate with them, maybe offer some perspective or guidance.<br><br>
   If I ever do open up other social media or start something new, chances are it'll be written about here. So in the future, if you're ever thinking "How's that Nuriel guy doing?"<br><br>
   Come here and whatever I'm up to will most likely be posted.<br><br>
-  If I ever do get better at web design I would like to setup an anonymous message system, so that way you
+  If I ever do get better at web design I would like to setup an anonymous message system, so that way you can ask questions anonymously and I'll give my thoughts here on some page on this site.<br><br>
+  So if I did ever do that, it'll most likely be on this page right below this text, so if you ever want my two cents on something, feel free to ask!<br><br>
+  It's forwarded to my personal email, so I'll get back to it as fast as I can.</p>
+
+  <form action="https://formspree.io/f/xoqgzade" method="POST">
+    <label>
+      Your message:
+      <textarea name="message" placeholder="ask anything anonymously"></textarea>
+    </label>
+    <button type="submit">Send</button>
+  </form>
+</body>
+</html>
