--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
       max-width: 1200px; /* Maximum width for larger screens */
     }
     textarea {
-      width: 100%;
+      width: 200%; /* Set the width to 2 times its original width */
       max-width: 1000px; /* Maximum width for the textarea */
       height: 200px;
       font-size: 16px;
