--- a/about.html
+++ b/about.html
@@ -32,6 +32,8 @@
       padding: 10px;
       box-sizing: border-box;
       margin-bottom: 20px;
+      margin-left: auto; /* Center the textarea by pushing it to the right */
+      margin-right: auto; /* Center the textarea by pushing it to the left */
     }
     button {
       font-size: 16px;
