--- a/about.html
+++ b/about.html
@@ -25,15 +25,13 @@
       max-width: 1200px; /* Maximum width for larger screens */
     }
     textarea {
-      width: 200%; /* Set the width to 2 times its original width */
+      width: 90%; /* Set the width to 90% of its container */
       max-width: 1000px; /* Maximum width for the textarea */
       height: 200px;
       font-size: 16px;
       padding: 10px;
       box-sizing: border-box;
       margin-bottom: 20px;
-      margin-left: auto; /* Center the textarea by pushing it to the right */
-      margin-right: auto; /* Center the textarea by pushing it to the left */
     }
     button {
       font-size: 16px;
