--- a/about.html
+++ b/about.html
@@ -21,12 +21,10 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 90%; /* Increased form width to accommodate larger textarea */
-      max-width: 1200px; /* Maximum width for larger screens */
+      width: 1080px;
     }
     textarea {
-      width: 90%; /* Set the width to 90% of its container */
-      max-width: 1000px; /* Maximum width for the textarea */
+      width: 1080px;
       height: 200px;
       font-size: 16px;
       padding: 10px;
