--- a/index.html
+++ b/index.html
@@ -17,9 +17,22 @@
             user-select: none;
             font-family: 'Comic Sans MS', cursive;
         }
+        /* mobile unsupported message */
+        .mobile-message {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-family: 'Comic Sans MS', cursive;
+            font-size: 24px;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
+    <!--mobile not supported message-->
+    <div class="mobile-message" id="mobileMessage">Mobile not supported yet, sorry :(</div>
     <!--socials attributes-->
     <a class="hyperlink" href="https://google.com" data-href="https://google.com">
         <div class="draggable" id="draggable1"></div>
