--- a/index.html
+++ b/index.html
@@ -65,6 +65,22 @@
 
     <!--js script to implement draggability and hyperlink functionality-->
     <script>
+
+    function isMobileDevice() {
+            return /Mobi|Android/i.test(navigator.userAgent);
+        }
+        if (isMobileDevice()) {
+            document.getElementById('mobileMessage').style.display = 'block';
+            document.querySelectorAll('.draggable, .text, .hyperlink').forEach(el => el.style.display = 'none');
+        } else {
+            const imageUrls = [
+                'https://raw.githubusercontent.com/FireMS/nuriel/main/bluePixelFolder.png',
+                'https://raw.githubusercontent.com/FireMS/nuriel/main/greenPixelFolder.png',
+                'https://raw.githubusercontent.com/FireMS/nuriel/main/orangePixelFolder.png',
+                'https://raw.githubusercontent.com/FireMS/nuriel/main/purplePixelFolder.png',
+                'https://raw.githubusercontent.com/FireMS/nuriel/main/blackPixelFolder.png'
+            ];
+
         const imageUrls = [
           'https://raw.githubusercontent.com/FireMS/nuriel/main/bluePixelFolder.png',
           'https://raw.githubusercontent.com/FireMS/nuriel/main/greenPixelFolder.png',
