--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
     <!--mobile not supported message-->
     <div class="mobile-message" id="mobileMessage">mobile not supported yet, sorry :(</div>
     <!--socials attributes-->
-    <a class="hyperlink" href="https://nurielmora.github.io/website/socials.html" data-href="https://nurielmora.github.io/website/socials.html">
+    <a class="hyperlink" href="https://nuriel.net/socials.html" data-href="https://nuriel.net/socials.html">
         <div class="draggable" id="draggable1"></div>
     </a>
     <div class="text" id="text1">socials</div>
 
     <!--about attributes-->
-    <a class="hyperlink" href="https://nurielmora.github.io/website/about.html" data-href="https://nurielmora.github.io/website/about.html">
+    <a class="hyperlink" href="https://nuriel.net/about.html" data-href="https://nuriel.net/about.html">
         <div class="draggable" id="draggable2"></div>
     </a>
     <div class="text" id="text2">about</div>
 
     <!--placeholder attributes-->
-    <a class="hyperlink" href="https://google.com" data-href="https://google.com">
+    <a class="hyperlink" href="https://nuriel.net/journals.html" data-href="https://nuriel.net/journals.html">
         <div class="draggable" id="draggable3"></div>
     </a>
-    <div class="text" id="text3">placeholder</div>
+    <div class="text" id="text3">journals</div>
 
     <!--placeholder attributes-->
     <a class="hyperlink" href="https://google.com" data-href="https://google.com">
