--- a/journals.html
+++ b/journals.html
@@ -37,8 +37,8 @@
 <body>
     <!--mobile not supported message-->
     <div class="mobile-message" id="mobileMessage">mobile not supported yet, sorry :(</div>
-    <!--socials attributes-->
-    <a class="hyperlink" href="https://google.com" data-href="https://google.com">
+    <!--journals attributes-->
+    <a class="hyperlink" href="https://nuriel.net/journals/6.21.24.txt" data-href="https://nuriel.net/journals/6.21.24.txt"> 
         <div class="draggable" id="draggable1"></div>
     </a>
     <div class="text" id="text1">6/21/24</div>
@@ -46,7 +46,6 @@
     <!--js script to implement draggability and hyperlink functionality-->
     <script>
         const imageUrls = [
-            'https://raw.githubusercontent.com/FireMS/nuriel/main/journals/journal.png',
             'https://raw.githubusercontent.com/FireMS/nuriel/main/journals/journal.png',
         ];
 
