--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <style>
-        /*draggable folder css element*/
+        /*draggable folder css elment*/
         .draggable {
             width: 64px;
             height: 56px;
