--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <style>
-        /*draggable folder css elment*/
+        /*draggable folder css element*/
         .draggable {
             width: 64px;
             height: 56px;
@@ -67,7 +67,7 @@
     </a>
     <div class="text" id="text5">placeholder</div>
 
-    <!--js script to implement draggability and hyperlink functionality-->
+    <!--js script to implement draggability, hyperlink functionality, and double-click shit-->
     <script>
         const imageUrls = [
             'https://raw.githubusercontent.com/nurielmora/website/main/folderImages/bluePixelFolder.png',
@@ -94,11 +94,12 @@
             draggables[i].addEventListener('mousedown', (event) => dragStart(event, i));
             draggables[i].addEventListener('mouseup', dragEnd);
             document.addEventListener('mousemove', (event) => drag(event, i));
+            draggables[i].addEventListener('dblclick', (event) => openLink(event, i));
         }
 
         function initializeFolder(draggable, text, id) {
             if (!localStorage.getItem(`folder${id}Position`)) {
-                // ensures shit dont generate outside the window
+                // ensures shit don't generate outside the window
                 let randomX = Math.floor(Math.random() * (window.innerWidth - 100));
                 let randomY = Math.floor(Math.random() * (window.innerHeight - 90));
                 randomX = Math.max(0, Math.min(randomX, window.innerWidth - 100));
@@ -122,7 +123,7 @@
             offsets[id] = { x: event.clientX - rect.left, y: event.clientY - rect.top };
         }
 
-        function dragEnd() {
+        function dragEnd() { // REAL GHETTO PROGRAMMING
             for (let i = 1; i <= 5; i++) {
                 if (isDragging[i]) {
                     isDragging[i] = false;
@@ -158,7 +159,14 @@
             text.style.left = textLeft + 'px';
             text.style.top = folderRect.bottom + 'px';
         }
-        //checks if user is on mobile
+
+        // opens shit when double clicked
+        function openLink(event, id) {
+            const hyperlink = draggables[id].closest('a');
+            window.location.href = hyperlink.getAttribute('href');
+        }
+
+        // checks if theyre on mobile
         const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
         if (isMobile) {
             document.getElementById('mobileMessage').style.display = 'block';
